--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap');
+
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
@@ -5,6 +7,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family:'Source Code Pro', monospace;
+  color:chartreuse;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('https://images.unsplash.com/photo-1609342122563-a43ac8917a3a?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1500&q=80')
+}
+
+#label{
+  text-align: left;
 }
 
 .main {
