--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,7 +12,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('https://images.unsplash.com/photo-1530818718778-8b666f576020?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1383&q=80')
+  background-image: url('https://images.unsplash.com/photo-1489549132488-d00b7eee80f1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80')
 }
 
 .container_dash {
@@ -21,6 +21,7 @@
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
+  overflow-x: auto;
   align-content: center;
   justify-content: flex-start;
   font-family:'Source Code Pro', monospace;
@@ -28,9 +29,16 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('https://images.unsplash.com/photo-1530818718778-8b666f576020?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1383&q=80')
+  background-image: url('https://images.unsplash.com/photo-1489549132488-d00b7eee80f1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80')
 }
 
+.top {
+  text-align: center;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  border-bottom: chartreuse 2px solid;
+}
 
 #label{
   text-align: left;
