--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -164,3 +164,12 @@
   overflow-x: auto;
   white-space: nowrap;
 }
+
+.profilepic{
+  margin-right: auto;
+  width: 30px;
+  height: 30px;
+  align-self: center;
+  overflow: hidden;
+  border-radius: 50%;
+}
