--- a/Components/Components.module.css
+++ b/Components/Components.module.css
@@ -75,3 +75,20 @@
     border: 1px solid black;
     border-radius: 50%;
 }
+
+.container_addNew {
+    min-height: 100vh;
+    width: 100%;
+    padding: 0 0.5rem;
+    display: flex;
+    flex-direction: column;
+    overflow-x: auto;
+    align-content: center; 
+    justify-content: flex-start;
+    font-family:'Source Code Pro', monospace;
+    color:chartreuse;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url('https://images.unsplash.com/photo-1489549132488-d00b7eee80f1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80')
+  }
