--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
+
+
 
 .container {
   min-height: 100vh;
@@ -7,12 +10,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family:'Source Code Pro', monospace;
+  font-family: 'Merriweather', serif;
+  /* font-size: 8vw; */
   color:chartreuse;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('https://images.unsplash.com/photo-1489549132488-d00b7eee80f1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80')
+  background-image: url('https://paddybaba.ddns.net/bg/background.jpg')
 }
 
 .container_dash {
@@ -24,12 +28,13 @@
   overflow-x: auto;
   align-content: center;
   justify-content: flex-start;
-  font-family:'Source Code Pro', monospace;
+  font-family: 'Merriweather', serif;
+  /* font-size: 6vw; */
   color:chartreuse;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('https://images.unsplash.com/photo-1489549132488-d00b7eee80f1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80')
+  background-image: url('https://paddybaba.ddns.net/bg/background.jpg')
 }
 
 .top {
