--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,7 +16,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('https://paddybaba.ddns.net/bg/background.jpg')
+  background-image: url('https://paddybaba.ddns.net/bg/background.jpg'),linear-gradient(to right, #0f0c29, #302b63, #24243e);
 }
 
 .container_dash {
@@ -34,7 +34,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('https://paddybaba.ddns.net/bg/background.jpg')
+  background-image: url('https://paddybaba.ddns.net/bg/background.jpg'),linear-gradient(to right, #0f0c29, #302b63, #24243e);
 }
 
 .top {
