--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -181,3 +181,13 @@
 .modalImage{
   width: 50%;
 }
+.modal{
+  border: 2px rgb(89, 255, 47) solid;
+  border-radius: 3px;
+  padding: 3%;
+  background-color: #21D4FD;
+  background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
+  font-family:sans-serif;
+  overflow-y:auto
+
+}
