--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -163,12 +163,7 @@
   }
 }
 
-.scrollX{
-  margin-top: 0.5rem;
-  display: flex;
-  overflow-x: auto;
-  white-space: nowrap;
-}
+
 
 .profilepic{
   margin-right: auto;
@@ -178,16 +173,16 @@
   overflow: hidden;
   border-radius: 50%;
 }
-.modalImage{
-  width: 50%;
-}
-.modal{
-  border: 2px rgb(89, 255, 47) solid;
-  border-radius: 3px;
-  padding: 3%;
-  background-color: #21D4FD;
-  background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
-  font-family:sans-serif;
-  overflow-y:auto
 
+.allPatients{
+  /* background: url("https://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/256/Apps-preferences-contact-list-icon.png") no-repeat; */
+  width: 10%;
 }
+
+/* .showButton{
+  width: fit-content;
+  border-color: transparent;
+  background-color: transparent;
+  color: chartreuse;
+  box-shadow: transparent;
+} */
