--- a/Components/Components.module.css
+++ b/Components/Components.module.css
@@ -160,11 +160,13 @@
   }
 
   .listBox{
-      margin-top: 10px;
+      margin-top: 15px;
       padding-left: 1%;
       justify-self: center;
       width:98%;
-      height: 40%;
-      overflow-y: scroll;
-  }
+      height: 50vh;
+      overflow-y: auto;
+      white-space: nowrap;
+      }
+  
 
