--- a/Components/Components.module.css
+++ b/Components/Components.module.css
@@ -168,5 +168,27 @@
       overflow-y: auto;
       white-space: nowrap;
       }
-  
+  .xrayContainer{
+      display: grid;
+      grid-template-columns: auto auto auto;
+      grid-template-rows: auto auto auto auto;
+      grid-auto-flow: row;
 
+  }
+  .xrayFilms{
+      width: 100px;
+      height:100px;
+      padding: 2px;
+      margin: 5px;
+      border-radius: 4px;
+      border: 1px black solid;
+  }
+  .inputHidden{
+      display: none;
+  }
+  .inputLabel{
+      border: 1px blue solid;
+      border-radius: 2px;
+      padding: 3px;
+      margin-right: auto;
+  }
