--- a/Components/Components.module.css
+++ b/Components/Components.module.css
@@ -176,12 +176,28 @@
 
   }
   .xrayFilms{
+      position: relative;
+      top: 0;
+      left: 0;
       width: 100px;
       height:100px;
       padding: 2px;
       margin: 5px;
       border-radius: 4px;
       border: 1px black solid;
+      transition: 200ms ease-in;
+  }
+  .xrayFilms:hover{
+      transform: scale(1.1);
+  }
+
+  .xrayEnlarged{
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      
+      width: 98%;
+      z-index: 1;
   }
   .inputHidden{
       display: none;
